# wordle_kernel

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  REUSE.toml  build.rs  build_limine.sh  justfile  kernel.ld
.cargo/: config.toml
grub/: grub.cfg
limine/: limine.conf
src/: boot.s  interrupts.rs  lib.rs  limine_requests.rs  limine_structs.rs  main.rs  memory.rs  multiboot2.rs  rendering.rs  serial.rs  text.rs  util.rs
src/bevy/: mod.rs
src/color/: mod.rs
src/debug/: mod.rs  rendering.rs  serial.rs  text.rs
src/trampoline/: framebuffer.rs  gdt.rs  happy_new_year.rs  interrupts.rs  limine_requests.rs  memory.rs  mod.rs
src/trampoline/memory/: allocators.rs  mod.rs
src/wordle/: mod.rs
uefi/: bios.bin.license
