[package]
name = "wordle_kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-graphics = "0.8.1"
limine = "0.5.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
spin = "0.10.0"
x86_64 = "0.15.4"
uart_16550 = "0.4.0"
linked_list_allocator = "0.10.5"
bevy = { version = "0.17.3", default-features = false, features = [
    "default_no_std",
] }
catppuccin = { git = "https://github.com/ItsSunnyMonster/catppuccin-rust.git" }

[profile.dev]
panic = "abort"

[profile.kernel]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
debug = false
overflow-checks = false
panic = "abort"
